# TickerTUI

./: .gitignore  .tickertui.json  Cargo.toml  README.md
src/: config.rs  main.rs
src/data/: fetch.rs  mod.rs  orderbook.rs  prices.rs  stream.rs  trades.rs
src/ui/: chart.rs  indicators.rs  layout.rs  mod.rs  orderbook.rs  statusbar.rs  timeframe.rs  tradetape.rs
