[package]
name = "tickertui"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
ratatui = "0.29.0"
crossterm = "0.28.1"
